--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,9 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,8 +35,11 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^4.0.0",
+    "customize-cra": "^0.9.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "react-app-rewired": "^2.1.5",
     "react-test-renderer": "^16.12.0"
   }
 }
